--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,9 @@ android {
 }
 
 dependencies {
-
+    implementation 'net.java.dev.jna:jna:5.8.0@aar'
+    implementation group: 'com.alphacephei', name: 'vosk-android', version: '0.3.32+'
+    implementation project(':models')
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
